--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -11,9 +11,9 @@ body {
   z-index: 10;
 }
 .carousel-caption span{
-	
-	background:rgba(0,0,0,0.7);
-	}
+    padding: 2px;
+    background:rgba(0,0,0,0.7);
+    }
 .carousel-item {
   height: 20rem;
   background-color: #777;
@@ -50,7 +50,9 @@ body {
 .title{
     background: #000;
 }
-
+.icon-serv{
+    font-size: 50px;
+}
 /* RESPONSIVE CSS ---- */
 
 @media (min-width: 40em) {
