--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,6 +1,6 @@
 body {
   padding-top: 4.5rem;
-  padding-bottom: 3rem;
+  /*padding-bottom: 3rem;*/
   color: #5a5a5a;
 }
 /* Carousel base class */
